# rust_stream_deck

./: .gitignore  AGENTS.md  Cargo.toml  build.rs  tarpaulin.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml  coverage.yml
docs/: DECLARATIVE_CONFIG.md  TESTING.md
sample_configs/: ._Default Profile.streamDeckProfile  Default Profile.streamDeckProfile  Stream Deck - 18-01-2026 - 17-26.streamDeckProfilesBackup
src/: device.rs  error.rs  image_ops.rs  lib.rs  logging.rs  main.rs  state.rs
src/batch/: mod.rs  scanner.rs
src/cli/: mod.rs
src/config/: db.rs  declarative.rs  key_config.rs  loader.rs  mod.rs  path.rs  schema.rs  selector.rs
src/device/: info.rs  mock.rs  mod.rs  real.rs
src/output/: dry_run.rs  human.rs  mod.rs  robot.rs
src/snapshot/: db.rs  mod.rs  schema.rs
src/theme/: mod.rs
tests/: batch_operations.rs  generate_fixtures.rs  integration.rs
tests/common/: assertions.rs  capture.rs  cli.rs  env.rs  fixtures.rs  logging.rs  mocks.rs  mod.rs
tests/e2e/: environment.rs  human_mode.rs  mod.rs  robot_mode.rs  watch_cmd.rs
tests/fixtures/: README.md  generate_fixtures.rs
tests/golden/robot/: README.md  all_cleared.json  all_filled.json  batch_clear_keys.json  batch_fill_keys.json  batch_set_keys.json  brightness_set.json  button_event_press.json  button_event_release.json  button_states.json  device_info.json  device_list_multiple.json  device_list_single.json  error_multiple_devices.json  error_no_device.json  info.json  key_cleared.json  key_filled.json  key_set.json  success.json  version.json  warning.json
tests/integration/: config_parsing.rs  device_operations.rs  image_processing.rs  mod.rs  state_management.rs
tests/unit/: mod.rs  robot_output.rs
